<resources>
    <!--Shop info -->
    <string name="app_name">Pizzería Giuseppe</string>
    <string name="shop_name">Pizzería Giuseppe</string>
    <string name="welcome">Bienvenido a nuestra APP. Navegue por la carta y añada los
        productos deseados a su pedido.</string>
    <string name="shop_description">Llevamos 23 años haciendo pizzas artesanales, pasta y un sin
        fin de recetas típicas de la zona. Todo ello realizado siempre de forma tradicional y
        casera aportando a nuestros platos ese toque inconfundible que nos caracteriza.</string>
    <string name="shop_contact"><b>Dirección:\n</b>Calle Real nº 28, Gelves (Sevilla)\n<b>Teléfono:</b>\n955760472</string>
    <string name="send_whatsapp"><b>Mándanos un WhatsApp:</b></string>
    <string name="whatsapp_phone"><u>649425570</u></string>
    <!--/Shop info -->

    <string name="contact">Contacto</string>
    <string name="home">Inicio</string>
    <string name="pizzas_menu">Pizzas</string>
    <string name="drinks_menu">Bebidas</string>
    <string name="appetizers">Complementos</string>
    <string name="main_courses">Platos</string>
    <string name="choose_size">Seleccione el tipo:</string>
    <string name="quantity">Cantidad: </string>
    <string name="element_added">¡Artículo añadido a su pedido!</string>
    <string name="total_price">Total: </string>
    <string name="continue_btn">Continuar</string>
    <string name="show_order_summary">Resumen del pedido</string>
    <string name="go_to_cart">Ir al carrito</string>
    <string name="ok_button">Aceptar</string>
    <string name="delete_button">Botón borrar</string>
    <string name="price_with_extras">Precio total:</string>
    <string name="customer_info">Información del cliente:</string>
    <string name="name">Nombre:</string>
    <string name="address">Dirección:</string>
    <string name="phone">Nº móvil:</string>
    <string name="delivery_method">Forma de entrega:</string>
    <string name="home_delivery">Envío a domicilio</string>
    <string name="pick_at_restaurant">Recoger en local</string>
    <string name="payment_method">Forma de pago</string>
    <string name="card">Tarjeta</string>
    <string name="cash">Efectivo</string>
    <string name="make_order">Realizar Pedido</string>
    <string name="make_order_activity">Finalizar Pedido</string>
    <string name="remove_ingredient">Quitar ingredientes</string>
    <string name="customize_ingredients">Personalizar</string>
    <string name="add_ingredients">Añadir ingredientes</string>
    <string name="error_empty_order">¡No puede realizar un pedido vacío!</string>
    <string name="order_placed_OK">¡Pedido realizado correctamente!</string>
    <string name="order_placed_fail">No se ha podido procesar su pedido.</string>
    <string name="pizza_details_activity">¿Cómo la quieres?</string>
    <string name="random_error">Ha ocurrido un error, vuelva a intentarlo.</string>
    <string name="deleted_element">Se ha borrado este elemento de su pedido</string>
    <string name="error_empty_name">Debe introducir un nombre</string>
    <string name="error_empty_phone">Debe introducir un número de teléfono</string>
    <string name="error_empty_address">Debe introducir una dirección o seleccionar la recogida en el local</string>
    <string name="invalid_number">El número de teléfono introducido no es válido</string>
    <string name="not_mobile_number">El número de teléfono debe ser un móvil español</string>
    <string name="undo">Deshacer</string>
    <string name="try_again_message">Por favor, vuelva a intentarlo en unos minutos.</string>
    <string name="order_waiting_time">Su pedido estará listo en aproximadamente %1$d minutos.</string>
    <string name="your_order_id">El código de su pedido es %1$s.</string>
    <string name="add">Añadir</string>
    <string name="sending_order">Enviando pedido…</string>
    <string name="order_status">Estado del pedido</string>
    <string name="shop_logo">Logo de la tienda</string>
    <string name="whatsapp_icon">Icono de WhatsApp</string>
    <string name="city">Localidad:</string>
    <string name="delivery">Reparto</string>
    <string name="currency_sign">€</string>
    <string name="download_invoice_underlined"><u>Descargar factura</u></string>
    <string name="download_invoice">Descargar factura</string>
    <string name="orders_history">Historial de pedidos</string>
    <string name="choose_order_to_see_details">Selecciona un pedido para ver los detalles:</string>
    <string name="filed_order_details">Detalles del pedido</string>
    <string name="processing_order">Procesando su pedido, espere por favor…</string>

    <string-array name="quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
