<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".controllers.PlaceOrderActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer_info" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:labelFor="@id/et_customer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name" />

            <EditText
                    android:id="@+id/et_customer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:autofillHints="personName" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:labelFor="@id/et_customer_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/phone" />

            <EditText
                    android:id="@+id/et_customer_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="phone"
                    android:autofillHints="phoneNumberDevice" />
        </LinearLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivery_method" />

        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <RadioButton
                    android:id="@+id/rb_pick_restaurant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="deliveryMethodChanged"
                    android:text="@string/pick_at_restaurant" />

            <RadioButton
                    android:id="@+id/rb_home_delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:onClick="deliveryMethodChanged"
                    android:text="@string/home_delivery" />

        </RadioGroup>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:labelFor="@id/et_customer_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:visibility="visible"
                    android:layout_marginEnd="12dp" />

            <EditText
                    android:id="@+id/et_customer_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="postalAddress"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPostalAddress"
                    android:text="@string/pick_at_restaurant" />
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView" />

            <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/city_spinner"
                    android:layout_weight="1" />
        </LinearLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_method" />

        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <RadioButton
                    android:id="@+id/rb_cash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/cash" />

            <RadioButton
                    android:id="@+id/rb_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card" />
        </RadioGroup>

        <Button
                android:id="@+id/btn_place_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="placeOrder"
                android:text="@string/make_order" />

        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/progressBar"
                android:indeterminate="true"
                android:visibility="invisible" />

        <TextView
                android:text="@string/sending_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_loading_text"
                android:contentDescription="@string/sending_order"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:visibility="invisible"
                android:layout_gravity="center_horizontal" />
    </LinearLayout>
</ScrollView>