<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="12dp"
    android:paddingTop="120dp"
    android:paddingEnd="12dp"
    tools:context=".controllers.ConfirmationScreenActivity">

    <ImageView
        android:id="@+id/img_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:srcCompat="@drawable/ic_ok_order"
        android:contentDescription="@string/order_status" />

    <TextView
        android:id="@+id/tv_main_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:text="@string/order_placed_OK" />

    <TextView
        android:id="@+id/tv_secondary_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="@string/order_waiting_time" />

    <TextView
        android:id="@+id/tv_order_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="@string/your_order_id" />

    <TextView
            android:text="@string/download_invoice_underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_download_invoice"
            android:gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:textColorLink="#FFFFFF"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="18sp" />
</LinearLayout>