<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding = "8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".controllers.ProductDetailsActivity">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_to_order_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:icon="@drawable/ic_add"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/add"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="Prueba" />

        <TextView
            android:id="@+id/tv_product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="Prueba" />

        <TextView
                android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/choose_size" />

        <Spinner
            android:id="@+id/spinner_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:gravity="end"
            android:text="@string/quantity" />

        <Spinner
            android:id="@+id/spinner_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_extras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Bacon, Pollo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/price_with_extras"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/tv_total_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:text="8,25€" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_customize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="customizeProduct"
                android:text="@string/customize_ingredients"
                tools:visibility="visible" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>