<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".PizzaDetailsActivity">

    <TextView
        android:id="@+id/tvIPizzaName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:text="Prueba" />

    <TextView
        android:id="@+id/tvPizzaIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="Prueba" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/choose_size" />

    <Spinner
        android:id="@+id/spinner_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:gravity="end"
        android:text="@string/quantity" />

    <Spinner
        android:id="@+id/spinner_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/quantity" />

    <LinearLayout
        android:id="@+id/layout_add_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:visibility="visible">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_button"
            android:onClick="addPizzaToOrder"
            app:srcCompat="@android:drawable/ic_input_add" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_extras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Bacon, Pollo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/price_with_extras" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="8,25€" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_customize_pizza_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="customizePizza"
        android:text="@string/customize_ingredients"
        tools:visibility="visible" />

</LinearLayout>